<resources>
    <string name="appName">LunchLottery</string>
    <string name="motto">Eat together</string>
    <string name="emailAddress">Email address</string>
    <string name="resetPassword">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="input">Join Next Week Lottery</string>
    <string name="output">View This Week Result</string>
    <string name="password">Password</string>
    <string name="forgotPasswordQn">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="registerUser">Register User</string>
    <string name="welcomeMsg">Welcome, username</string>
    <string name="telegramHandle">Telegram Handle without @</string>
    <string name="addItem">Add Item</string>
    <string name="joinLottery">Join Lottery</string>
    <string name="deleteEntry">Delete Entry</string>
    <string name="item">Item</string>
    <string name="qty">Quantity</string>
    <string name="noPriorInput">This is the first time your are entering the Lottery.</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="twelve">12:00</string>
    <string name="twelveThirty">12:30</string>
    <string name="thirteen">13:00</string>
    <string name="thirteenThirty">13:30</string>
    <string name="pickTime">Pick a Time</string>
    <string name="matched">Your Match</string>
    <string name="timed">Chosen Time</string>
    <string name="eat">BON APPETIT</string>
    <string name="view_results">View Results</string>
    <string name="join_next_lottery">Join Next Lottery</string>
    <string name="let_s_eat_together">Let\'s eat together!</string>
    <string name="back">back</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="populated_slots">Populated Slots</string>
    <string name="timeSlot">TimeSlot</string>
    <string name="count">Count</string>
    <string name="nobody_joined">Nobody Joined Yet</string>



</resources>