<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe3d6"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/playfair"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="336dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#766052"
        android:text="@string/login"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telegramHandle" />

    <EditText
        android:id="@+id/telegramHandle"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
        android:autofillHints="telegramHandleAddress"
        android:hint="@string/telegramHandle"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerDescription" />

    <TextView
        android:id="@+id/bannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/let_s_eat_together"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.435"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textColor="#766052"
        android:textSize="16sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="284dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="167dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
