<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe3d6"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textName"
        android:textColor="#766052"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcomeMsg"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="italic"
        android:fontFamily="@font/aleo_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner2" />

    <TextView
        android:id="@+id/banner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/playfair"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:backgroundTint="#766052"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/Input"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:text="@string/join_next_lottery"
        android:background="@drawable/round_button"
        android:backgroundTint="#766052"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/Output"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/Output"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:text="@string/view_results"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#766052"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input" />



</androidx.constraintlayout.widget.ConstraintLayout>





